--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 @font-face {
@@ -13,7 +14,7 @@ body {
   height: 100vh;
 }
 
-sidebar {
+.sidebar {
   background-image: url(halie-west-25xggax4bSA-unsplash.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -21,9 +22,12 @@ sidebar {
   flex: 1;
   position: relative;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-sidebar > div {
+.sidebar > div {
   position: absolute;
   top: 150px;
   display: flex;
@@ -33,26 +37,24 @@ sidebar > div {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-sidebar > div > p {
+.sidebar > div > p {
   font-family: Norse-bold;
   font-weight: bold;
   font-size: 4.2rem;
   color: white;
 }
 
-sidebar > div > img {
+.sidebar > div > img {
   width: 5em;
 }
 
-sidebar > p {
+.sidebar > p {
   position: absolute;
-  left: 50%;
-  right: 50%;
   bottom: 10px;
   margin: 0 auto;
 }
 
-sidebar > p > a {
+.sidebar > p > a {
   color: white;
   margin: 0.2em;
 }
@@ -67,17 +69,112 @@ main {
 main > div {
   flex: 1;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(241, 236, 236);
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 15px;
+  background-color: rgb(250, 250, 250);
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 0px 0px 40px 20px;
+}
+
+main > div > p {
+  max-width: 800px;
 }
 
 form {
-  flex: 1;
+  flex: 2;
   display: flex;
   flex-direction: column;
+  gap: 30px;
+  padding: 20px 0px;
+}
+
+legend {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+form input {
+  background-color: white;
+  padding: 10px;
+  border: 1px solid #dadbdd;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+form input:focus {
+  outline: 1px solid blue;
+  box-shadow: 0 5px 3px rgb(138, 133, 133);
+}
+
+input:valid {
+  outline: 1px solid green;
+}
+
+form input:invalid {
+  outline: 1px solid red;
 }
 
 .info-input {
   display: flex;
+  gap: 4em;
+  border: none;
+  flex: 1;
+  width: 100%;
+  box-shadow: 0 3px 3px rgb(218, 208, 208);
+  padding: 20px;
+}
+
+.info-input fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.info-input > fieldset > label {
+  display: flex;
+  flex-direction: column;
+}
+
+.submit-section {
+  border: none;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 0 20px;
+}
+
+.submit-section button {
+  padding: 10px 25px;
+  background-color: #596d48;
+  color: white;
+  border: none;
+  border-radius: 6px;
+}
+
+.submit-section a {
+  text-decoration: none;
+  color: black;
+}
+
+.submit-section button:hover {
+  background-color: #4d5e3d;
+  cursor: pointer;
+}
+
+.submit-section a:hover {
+  text-decoration: underline;
+}
+
+input,
+button {
+  transition: all 0.2s ease;
 }
